--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
   ],
   "license": "MIT",
   "homepage": "https://github.com/zhangjunTracy/vue-comment-list#readme.md",
+  "peerDependencies": {
+    "vue": "2.x"
+  },
   "dependencies": {
-    "vue": "^2.5.2"
   },
   "devDependencies": {
+    "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
