--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vue-comment-list",
-  "version": "1.0.0",
-  "description": "a vue component which comment and a list comments",
+  "version": "1.0.1",
+  "description": "a vue component which comment and a list comments 一个关于评论和评论列表的组件",
   "author": "zj",
   "private": false,
   "main": "dist/vue-comment-list.js",
