--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "vue-comment-list",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "a vue component which comment and a list comments 一个关于评论和评论列表的组件",
   "author": "zj",
   "private": false,
-  "main": "dist/vue-comment-list.js",
+  "main": "dist/vue-comment-list.min.js",
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
